data/all_generated_tests/raw_wast_tests/br_InfiniteLoops_490.wast
;; 1. **Label Index Misinterpretation within Nested Loops**: Create a nested loop where the `br` instruction targets an incorrect label due to a possible label index misinterpretation. This should check whether the implementation can correctly interpret the loop labels and avoid creating an infinite loop by jumping out of the innermost loop as intended.

(assert_invalid
  (module
    (func
      (loop (br 2))
    )
  )
  "unknown label"
)